<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--edddddd -->
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV1" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV2" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV3" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV4" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV5" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV6" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV7" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/TV8" />

</LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </RadioButton>
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="24dp">
        </RadioButton>
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="24dp">
        </CheckBox>

</LinearLayout>

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5" />

</LinearLayout>